# LuaBackend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DOCUMENT.md  INSTALL.md  LuaBackend.sln  README.md  version.h.in
.github/workflows/: main.yml  release.yml
CMake/: BuildInfo.cmake
LuaBackendDLL/: LuaBackendDLL.vcxproj  game_info.h  main_dll.cpp  x86_64.h
LuaBackendEXE/: LuaBackendEXE.vcxproj  main.cpp
LuaBackendHookDLL/: LuaBackendHookDLL.vcxproj  main_dll.cpp
LuaBackendHookDLL/EXE_PATCHES/: KINGDOM HEARTS II FINAL MIX.bps
LuaBackendHookDLL/EXE_PATCH_SOURCE/: KINGDOM HEARTS II FINAL MIX.cs
LuaBackendLIB/: LuaBackendLIB.vcxproj  LuaBackendLIB.vcxproj.filters
LuaBackendLIB/include/: LuaBackend.h  MemoryLib.h  x86.h
LuaBackendLIB/source/: GitRequest.cpp  LuaBackend.cpp
config/: LuaBackend.toml
include/: GitRequest.h  MemoryLib.h  Operator32Lib.h
src/: ConsoleLib.cpp  ConsoleLib.h  DCInstance.cpp  DCInstance.h  LuaBackend.cpp  LuaBackend.h  MemoryLib.h  config.cpp  config.h  game_info.h  header_text.cpp  header_text.h  kh2.cpp  kh2.h  lua_exec.cpp  lua_exec.h  main_dll.cpp  wil_extra.h  x86_64.h
